    type of crypt device ("luks" / "plain" / "tcrypt").
  * debian/initramfs/scripts/local-top/cryptroot: Don't complain that
    (successful) unlocking of a LUKS device doesn't yield a known file system.
    The check is preserved for plain dm-crypt devices and tcrypt devices.
    (Closes: #906283.)
  * debian/control: Bump Standards-Version to 4.2.1 (no changes necessary).

  [ Helmut Grohne ]
  * Fix FTCBFS: Supply $(CC) from dpkg's buildtools.mk. (Closes: #911042)

  [ Dimitri John Ledkov ]
  * Implement support for `cryptsetup --sector-size` in crypttab(5).
    LP: #1776626.

 -- Guilhem Moulin <guilhem@debian.org>  Sun, 09 Sep 2018 04:32:41 +0200

cryptsetup (2:2.0.4-2) unstable; urgency=medium

  * debian/cryptsetup-initramfs.preinst: Don't try to overwrite
    /etc/cryptsetup-initramfs/conf-hook if that file doesn't exist.  (The fix
    for #905188 broke 2:2.0.4-1's instability on sid.)  Closes: #905514.
  * debian/control: Bump Standards-Version to 4.2.0 (no changes necessary).

 -- Guilhem Moulin <guilhem@debian.org>  Tue, 07 Aug 2018 17:25:30 +0200

cryptsetup (2:2.0.4-1) unstable; urgency=medium

  * New upstream release.  Add 'libblkid-dev' to Build-Depends since
    libcryptsetup and utilities are now linked to libblkid.
  * debian/cryptsetup-initramfs.preinst: Improve conffile ownership transfer
    from 'cryptsetup' to 'cryptsetup-initramfs' to comply with Policy §10.7.3.
    (Closes: #905188.)

 -- Guilhem Moulin <guilhem@debian.org>  Sun, 05 Aug 2018 04:59:10 +0800

cryptsetup (2:2.0.3-7) unstable; urgency=medium

  * debian/scripts/gen-ssl-key: avoid storing temporary key file on disk.
  * debian/initramfs/*, debian/scripts/*: improve quoting.
  * debian/initramfs/cryptroot-unlock: Normalize paths before comparison.
    This fixes usage on initramfs images with an usrmerge layout, such as
    images made by mkinitramfs(8) from initramfs-tools-core 0.132. (Closes:
    #904926.)